@@ -1,7 +1,9 @@
 caputils-0.7.5
 --------------
 
-	* fix: support for specifying pcap prefix.
+	* add: stream_from_getopt and stream_print_info helpers.
+	* fix: large-file support for 32bit arch.
+	* fix: support for specifying pcap prefix to configure.
 	* add: capmarker: utility for sending a special marker packets.
 	* add: adding timeout to capdump which increases the responsiveness, e.g.
 	       when piping to another application. Defaults to 1000ms.
